Bug #44635 --> when replying or forwarding a message, we were passing in a bogus channel when we tried to fetch the message for quoting purposes. As a result, the content type (which includes the charset information for the message) was not getting set on the right channel. I changed things so we pass in the real channel and not a bogus one.

r=alecf